# ohjelmistotekniikka2024

./: .gitignore  README.md
videopoker/: .coveragerc  .env  .env.test  game_database.sqlite  pyproject.toml  pytest.ini  tasks.py
videopoker/data/: game_database.sqlite  test-game_database.sqlite
videopoker/documentation/: arkkitehtuuri.md  changelog.md  kayttoohje.md  requirements.md  testiraportti.MD  working_hours.md
videopoker/documentation/kuvat/: arkkitehtuuri-luokkakaavio.mmd  luokkakaavio.mmd  sekvenssi-valitse-pelaajaprofiili.mmd
videopoker/playing_card_pictures/: license.txt
videopoker/src/: build.py  card.py  config.py  database_connection.py  dealer.py  deck.py  game.py  game_database.sqlite  game_repository.py  hand.py  hand_value.py  index.py  index2.py  initialize_database.py  pokerevaluator.py  videopokerservice.py
videopoker/src/entities/: card.py  dealer.py  deck.py  game.py  hand.py  hand_value.py  payout_table.py  pokerevaluator.py  user.py
videopoker/src/repositories/: game_repository.py  image_repository.py  user_repository.py
videopoker/src/services/: videopokerservice.py
videopoker/src/tests/: card_test.py  deck_test.py  hand_test.py  pokerevaluator_test.py  test_game.py  user_test.py
videopoker/src/tests/entities/: dealer_test.py  deck_test.py  game_test.py  hand_test.py  pokerevaluator_test.py  user_test.py
videopoker/src/ui/: ui.py  user_view.py  video_poker_view.py
viikko2/: pyproject.toml
viikko2/maksukortti/: pyproject.toml
viikko2/maksukortti/src/tests/: maksukortti_test.py
viikko2/unicafe/src/: kassapaate.py
(+19 files in other folders)
